--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flow_compose
 description: "flow chart for flutter (FOR FUN)."
-version: 0.0.1+7
+version: 0.0.2
 homepage: https://github.com/guchengxi1994/flow_compose
 
 environment:
