--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flow_compose
 description: "flow chart for flutter."
-version: 0.0.3+1
+version: 0.0.4
 homepage: https://github.com/guchengxi1994/flow_compose
 
 environment:
